--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 2rem;
+  padding: 0;
 }
 
 .main {
@@ -10,6 +10,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+/* Light mode */
+@media (prefers-color-scheme: light) {
+  .main {
+    background: #fff;
+  }
+}
+/* Dark mode */
+@media (prefers-color-scheme: dark) {
+  .main {
+    background: #222;
+  }
 }
 
 .footer {
@@ -43,6 +56,19 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  color: #fafafa;
+}
+/* Light mode */
+@media (prefers-color-scheme: light) {
+  .title {
+    color: #111;
+  }
+}
+/* Dark mode */
+@media (prefers-color-scheme: dark) {
+  .title {
+    color: #fafafa;
+  }
 }
 
 .title,
